<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity"
    android:gravity="center"
    android:background="@drawable/auth_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lbtn"
                android:onClick="backOnClick"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/name"
                android:gravity="left"
                android:hint="@string/name"
                android:padding="30dp"
                android:textSize="19sp"
                android:inputType="textPersonName"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/email"
                android:gravity="left"
                android:hint="@string/Email"
                android:padding="30dp"
                android:textSize="19sp"
                tools:ignore="RtlHardcoded,TextFields"
                tools:targetApi="o"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/password"
                android:gravity="left"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="30dp"
                android:textSize="19sp"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />
            <EditText
                android:id="@+id/et_re_password"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/password"
                android:gravity="left"
                android:hint="@string/rePassword"
                android:inputType="textPassword"
                android:padding="30dp"
                android:textSize="19sp"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/phone_number"
                android:gravity="left"
                android:hint="@string/PhoneNumber"
                android:padding="30dp"
                android:textSize="19sp"
                android:inputType="phone"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_curve"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="btnSignUpOnClick"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>