<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:orientation="vertical"

    android:background="@drawable/auth_background"
    >

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="start"
        android:background="@drawable/lbtn"
        android:onClick="btnBackOnClick"
        tools:ignore="ContentDescription,RtlHardcoded" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"

                android:text="Login to your account"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                tools:ignore="HardcodedText,RtlCompat" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/email"
                android:gravity="left"
                android:hint="@string/Email"
                android:padding="30dp"
                android:textSize="19sp"
                tools:ignore="RtlHardcoded,TextFields"
                tools:targetApi="o"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circuilar_textview"
                android:drawableRight="@drawable/password"
                android:gravity="left"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="30dp"
                android:textSize="19sp"
                tools:ignore="Autofill,RtlHardcoded,TextFields,TextViewEdits" />


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_curve"
                android:text="@string/sign_in"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="btnSignInOnClick"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/textView11"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="20dp"
                android:text="Forgot Password?"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="18sp"
                tools:ignore="DuplicateIds,HardcodedText,RtlCompat" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


